# pdf

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/pdf/: __init__.py  pdf.py  test_pdf.py
pelican/plugins/pdf/test_data/: testfile.md  testfile.rst  testfile_link.md  testfile_link.rst
