[project]
name = "pelican-pdf"
version = "1.0.4"
description = "PDF Generator is a Pelican plugin that exports articles and pages as PDF files during site generation"
authors = [{name = "Justin Mayer", email = "entroP@gmail.com"}, {name = "Dominik Wombacher", email = "dominik@wombacher.cc"}]
license = {text = "AGPL-3.0"}
readme = "README.md"
keywords = ["pelican", "plugin", "pdf", "generator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.8.1,<4.0"
dependencies = [
    "pelican>=4.5",
    "rst2pdf>=0.99",
    "xhtml2pdf>=0.2.5",
]

[project.urls]
Homepage = "https://github.com/pelican-plugins/pdf"
"Issue Tracker" = "https://github.com/pelican-plugins/pdf/issues"
Funding = "https://donate.getpelican.com/"

[tool.pdm]

[tool.pdm.dev-dependencies]
lint = [
    "invoke>=2.2.0",
    "ruff>=0.4.5,<0.5.0"
]
test = [
    "markdown>=3.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-sugar>=1.0.0",
]

[tool.pdm.build]
source-includes = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]
includes = ["pelican/"]
excludes = ["**/.DS_Store", "tasks.py"]

[tool.autopub]
project-name = "PDF Generator"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PL",  # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  "D100",    # missing docstring in public module
  "D102",    # missing docstring in public method
  "D103",    # missing docstring in public function
  "D104",    # missing docstring in public package
  "D107",    # missing docstring in __init__
  "D203",    # blank line before class docstring
  "D213",    # multi-line docstring summary should start at the second line
  "ISC001",  # disabled so that format works without warning
  "PGH004",  # use specific rule codes when using `NOQA`
  "RUF012",  # mutable class attributes should be annotated with `typing.ClassVar`
  "RUF100",  # unused blanket `NOQA` directive
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pelican"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
